src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    ASM
    CASE
    CONSTRUCTOR
    DESTRUCTOR
    EXTERNAL
    FILE
    FORWARD
    GOTO
    IMPLEMENTATION
    INLINE
    INTERFACE
    INTERRUPT
    LABEL
    OBJECT
    PACKED
    SET
    UNIT
    VIRTUAL
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block DOT
Rule 2     block -> declarations BEGIN statement_list END
Rule 3     declarations -> declarations declaration
Rule 4     declarations -> empty
Rule 5     declaration -> var_declaration
Rule 6     declaration -> const_declaration
Rule 7     declaration -> type_declaration
Rule 8     declaration -> procedure_declaration
Rule 9     declaration -> function_declaration
Rule 10    declaration -> uses_clause
Rule 11    uses_clause -> USES identifier_list SEMICOLON
Rule 12    identifier_list -> identifier_list COMMA ID
Rule 13    identifier_list -> ID
Rule 14    var_declaration -> VAR var_decl_list
Rule 15    var_decl_list -> var_decl_list var_decl
Rule 16    var_decl_list -> var_decl
Rule 17    var_decl -> id_list COLON type SEMICOLON
Rule 18    id_list -> id_list COMMA ID
Rule 19    id_list -> ID
Rule 20    const_declaration -> CONST const_list
Rule 21    const_list -> const_list const_decl
Rule 22    const_list -> const_decl
Rule 23    const_decl -> ID EQUAL constant SEMICOLON
Rule 24    type_declaration -> TYPE type_decl_list
Rule 25    type_decl_list -> type_decl_list type_decl
Rule 26    type_decl_list -> type_decl
Rule 27    type_decl -> ID EQUAL type SEMICOLON
Rule 28    procedure_declaration -> PROCEDURE ID SEMICOLON block SEMICOLON
Rule 29    procedure_declaration -> PROCEDURE ID LPAREN param_list RPAREN SEMICOLON block SEMICOLON
Rule 30    function_declaration -> FUNCTION ID COLON type SEMICOLON block SEMICOLON
Rule 31    function_declaration -> FUNCTION ID LPAREN param_list RPAREN COLON type SEMICOLON block SEMICOLON
Rule 32    param_list -> param_list SEMICOLON param
Rule 33    param_list -> param
Rule 34    param -> id_list COLON type
Rule 35    type -> INTEGER
Rule 36    type -> REAL
Rule 37    type -> BOOLEAN
Rule 38    type -> STRING
Rule 39    type -> ID
Rule 40    type -> ARRAY LBRACKET range RBRACKET OF type
Rule 41    type -> RECORD field_list END
Rule 42    range -> INTEGER_CONST DOTDOT INTEGER_CONST
Rule 43    field_list -> field_list field_decl SEMICOLON
Rule 44    field_list -> field_decl SEMICOLON
Rule 45    field_decl -> id_list COLON type
Rule 46    statement_list -> statement_list statement
Rule 47    statement_list -> statement
Rule 48    statement -> assignment_statement
Rule 49    statement -> procedure_call
Rule 50    statement -> compound_statement
Rule 51    statement -> if_statement
Rule 52    statement -> while_statement
Rule 53    statement -> repeat_statement
Rule 54    statement -> for_statement
Rule 55    statement -> empty
Rule 56    assignment_statement -> variable ASSIGN expression SEMICOLON
Rule 57    variable -> ID
Rule 58    variable -> ID LBRACKET expression_list RBRACKET
Rule 59    variable -> ID DOT ID
Rule 60    expression_list -> expression_list COMMA expression
Rule 61    expression_list -> expression
Rule 62    procedure_call -> ID LPAREN args RPAREN SEMICOLON
Rule 63    procedure_call -> ID SEMICOLON
Rule 64    args -> args COMMA expression
Rule 65    args -> expression
Rule 66    args -> empty
Rule 67    compound_statement -> BEGIN statement_list END
Rule 68    if_statement -> IF expression THEN statement else_part
Rule 69    else_part -> ELSE statement
Rule 70    else_part -> empty
Rule 71    while_statement -> WHILE expression DO statement
Rule 72    repeat_statement -> REPEAT statement_list UNTIL expression SEMICOLON
Rule 73    for_statement -> FOR ID ASSIGN expression direction expression DO statement
Rule 74    direction -> TO
Rule 75    direction -> DOWNTO
Rule 76    expression -> simple_expression relop_opt
Rule 77    relop_opt -> relop simple_expression
Rule 78    relop_opt -> empty
Rule 79    relop -> EQUAL
Rule 80    relop -> NEQUAL
Rule 81    relop -> LT
Rule 82    relop -> LE
Rule 83    relop -> GT
Rule 84    relop -> GE
Rule 85    relop -> IN
Rule 86    simple_expression -> term
Rule 87    simple_expression -> simple_expression addop term
Rule 88    addop -> PLUS
Rule 89    addop -> MINUS
Rule 90    addop -> OR
Rule 91    addop -> XOR
Rule 92    term -> factor
Rule 93    term -> term mulop factor
Rule 94    mulop -> TIMES
Rule 95    mulop -> DIVIDE
Rule 96    mulop -> DIVIDE_INT
Rule 97    mulop -> MODULO
Rule 98    mulop -> DIV
Rule 99    mulop -> MOD
Rule 100   mulop -> AND
Rule 101   mulop -> SHL
Rule 102   mulop -> SHR
Rule 103   factor -> variable
Rule 104   factor -> INTEGER_CONST
Rule 105   factor -> REAL_CONST
Rule 106   factor -> STRING_LITERAL
Rule 107   factor -> LPAREN expression RPAREN
Rule 108   factor -> NOT factor
Rule 109   factor -> MINUS factor
Rule 110   constant -> INTEGER_CONST
Rule 111   constant -> REAL_CONST
Rule 112   constant -> STRING_LITERAL
Rule 113   constant -> NIL
Rule 114   empty -> <empty>

Terminals, with rules where they appear

ABSOLUTE             : 
AND                  : 100
ARRAY                : 40
ASM                  : 
ASSIGN               : 56 73
BEGIN                : 2 67
BOOLEAN              : 37
CASE                 : 
COLON                : 17 30 31 34 45
COMMA                : 12 18 60 64
CONST                : 20
CONSTRUCTOR          : 
DESTRUCTOR           : 
DIV                  : 98
DIVIDE               : 95
DIVIDE_INT           : 96
DO                   : 71 73
DOT                  : 1 59
DOTDOT               : 42
DOWNTO               : 75
ELSE                 : 69
END                  : 2 41 67
EQUAL                : 23 27 79
EXTERNAL             : 
FILE                 : 
FOR                  : 73
FORWARD              : 
FUNCTION             : 30 31
GE                   : 84
GOTO                 : 
GT                   : 83
ID                   : 1 12 13 18 19 23 27 28 29 30 31 39 57 58 59 59 62 63 73
IF                   : 68
IMPLEMENTATION       : 
IN                   : 85
INLINE               : 
INTEGER              : 35
INTEGER_CONST        : 42 42 104 110
INTERFACE            : 
INTERRUPT            : 
LABEL                : 
LBRACKET             : 40 58
LE                   : 82
LPAREN               : 29 31 62 107
LT                   : 81
MINUS                : 89 109
MOD                  : 99
MODULO               : 97
NEQUAL               : 80
NIL                  : 113
NOT                  : 108
OBJECT               : 
OF                   : 40
OR                   : 90
PACKED               : 
PLUS                 : 88
PROCEDURE            : 28 29
PROGRAM              : 1
RBRACKET             : 40 58
REAL                 : 36
REAL_CONST           : 105 111
RECORD               : 41
REPEAT               : 72
RPAREN               : 29 31 62 107
SEMICOLON            : 1 11 17 23 27 28 28 29 29 30 30 31 31 32 43 44 56 62 63 72
SET                  : 
SHL                  : 101
SHR                  : 102
STRING               : 38
STRING_LITERAL       : 106 112
THEN                 : 68
TIMES                : 94
TO                   : 74
TYPE                 : 24
UNIT                 : 
UNTIL                : 72
USES                 : 11
VAR                  : 14
VIRTUAL              : 
WHILE                : 71
WITH                 : 
XOR                  : 91
error                : 

Nonterminals, with rules where they appear

addop                : 87
args                 : 62 64
assignment_statement : 48
block                : 1 28 29 30 31
compound_statement   : 50
const_decl           : 21 22
const_declaration    : 6
const_list           : 20 21
constant             : 23
declaration          : 3
declarations         : 2 3
direction            : 73
else_part            : 68
empty                : 4 55 66 70 78
expression           : 56 60 61 64 65 68 71 72 73 73 107
expression_list      : 58 60
factor               : 92 93 108 109
field_decl           : 43 44
field_list           : 41 43
for_statement        : 54
function_declaration : 9
id_list              : 17 18 34 45
identifier_list      : 11 12
if_statement         : 51
mulop                : 93
param                : 32 33
param_list           : 29 31 32
procedure_call       : 49
procedure_declaration : 8
program              : 0
range                : 40
relop                : 77
relop_opt            : 76
repeat_statement     : 53
simple_expression    : 76 77 87
statement            : 46 47 68 69 71 73
statement_list       : 2 46 67 72
term                 : 86 87 93
type                 : 17 27 30 31 34 40 45
type_decl            : 25 26
type_decl_list       : 24 25
type_declaration     : 7
uses_clause          : 10
var_decl             : 15 16
var_decl_list        : 14 15
var_declaration      : 5
variable             : 56 103
while_statement      : 52

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block DOT
    (2) block -> . declarations BEGIN statement_list END
    (3) declarations -> . declarations declaration
    (4) declarations -> . empty
    (114) empty -> .

    BEGIN           reduce using rule 114 (empty -> .)
    VAR             reduce using rule 114 (empty -> .)
    CONST           reduce using rule 114 (empty -> .)
    TYPE            reduce using rule 114 (empty -> .)
    PROCEDURE       reduce using rule 114 (empty -> .)
    FUNCTION        reduce using rule 114 (empty -> .)
    USES            reduce using rule 114 (empty -> .)

    block                          shift and go to state 5
    declarations                   shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON block . DOT

    DOT             shift and go to state 8


state 6

    (2) block -> declarations . BEGIN statement_list END
    (3) declarations -> declarations . declaration
    (5) declaration -> . var_declaration
    (6) declaration -> . const_declaration
    (7) declaration -> . type_declaration
    (8) declaration -> . procedure_declaration
    (9) declaration -> . function_declaration
    (10) declaration -> . uses_clause
    (14) var_declaration -> . VAR var_decl_list
    (20) const_declaration -> . CONST const_list
    (24) type_declaration -> . TYPE type_decl_list
    (28) procedure_declaration -> . PROCEDURE ID SEMICOLON block SEMICOLON
    (29) procedure_declaration -> . PROCEDURE ID LPAREN param_list RPAREN SEMICOLON block SEMICOLON
    (30) function_declaration -> . FUNCTION ID COLON type SEMICOLON block SEMICOLON
    (31) function_declaration -> . FUNCTION ID LPAREN param_list RPAREN COLON type SEMICOLON block SEMICOLON
    (11) uses_clause -> . USES identifier_list SEMICOLON

    BEGIN           shift and go to state 9
    VAR             shift and go to state 17
    CONST           shift and go to state 18
    TYPE            shift and go to state 19
    PROCEDURE       shift and go to state 20
    FUNCTION        shift and go to state 21
    USES            shift and go to state 22

    declaration                    shift and go to state 10
    var_declaration                shift and go to state 11
    const_declaration              shift and go to state 12
    type_declaration               shift and go to state 13
    procedure_declaration          shift and go to state 14
    function_declaration           shift and go to state 15
    uses_clause                    shift and go to state 16

state 7

    (4) declarations -> empty .

    BEGIN           reduce using rule 4 (declarations -> empty .)
    VAR             reduce using rule 4 (declarations -> empty .)
    CONST           reduce using rule 4 (declarations -> empty .)
    TYPE            reduce using rule 4 (declarations -> empty .)
    PROCEDURE       reduce using rule 4 (declarations -> empty .)
    FUNCTION        reduce using rule 4 (declarations -> empty .)
    USES            reduce using rule 4 (declarations -> empty .)


state 8

    (1) program -> PROGRAM ID SEMICOLON block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block DOT .)


state 9

    (2) block -> declarations BEGIN . statement_list END
    (46) statement_list -> . statement_list statement
    (47) statement_list -> . statement
    (48) statement -> . assignment_statement
    (49) statement -> . procedure_call
    (50) statement -> . compound_statement
    (51) statement -> . if_statement
    (52) statement -> . while_statement
    (53) statement -> . repeat_statement
    (54) statement -> . for_statement
    (55) statement -> . empty
    (56) assignment_statement -> . variable ASSIGN expression SEMICOLON
    (62) procedure_call -> . ID LPAREN args RPAREN SEMICOLON
    (63) procedure_call -> . ID SEMICOLON
    (67) compound_statement -> . BEGIN statement_list END
    (68) if_statement -> . IF expression THEN statement else_part
    (71) while_statement -> . WHILE expression DO statement
    (72) repeat_statement -> . REPEAT statement_list UNTIL expression SEMICOLON
    (73) for_statement -> . FOR ID ASSIGN expression direction expression DO statement
    (114) empty -> .
    (57) variable -> . ID
    (58) variable -> . ID LBRACKET expression_list RBRACKET
    (59) variable -> . ID DOT ID

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    ID              shift and go to state 35
    BEGIN           shift and go to state 23
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    REPEAT          shift and go to state 38
    FOR             shift and go to state 39
    END             reduce using rule 114 (empty -> .)

  ! ID              [ reduce using rule 114 (empty -> .) ]
  ! BEGIN           [ reduce using rule 114 (empty -> .) ]
  ! IF              [ reduce using rule 114 (empty -> .) ]
  ! WHILE           [ reduce using rule 114 (empty -> .) ]
  ! REPEAT          [ reduce using rule 114 (empty -> .) ]
  ! FOR             [ reduce using rule 114 (empty -> .) ]

    statement_list                 shift and go to state 24
    statement                      shift and go to state 25
    assignment_statement           shift and go to state 26
    procedure_call                 shift and go to state 27
    compound_statement             shift and go to state 28
    if_statement                   shift and go to state 29
    while_statement                shift and go to state 30
    repeat_statement               shift and go to state 31
    for_statement                  shift and go to state 32
    empty                          shift and go to state 33
    variable                       shift and go to state 34

state 10

    (3) declarations -> declarations declaration .

    BEGIN           reduce using rule 3 (declarations -> declarations declaration .)
    VAR             reduce using rule 3 (declarations -> declarations declaration .)
    CONST           reduce using rule 3 (declarations -> declarations declaration .)
    TYPE            reduce using rule 3 (declarations -> declarations declaration .)
    PROCEDURE       reduce using rule 3 (declarations -> declarations declaration .)
    FUNCTION        reduce using rule 3 (declarations -> declarations declaration .)
    USES            reduce using rule 3 (declarations -> declarations declaration .)


state 11

    (5) declaration -> var_declaration .

    BEGIN           reduce using rule 5 (declaration -> var_declaration .)
    VAR             reduce using rule 5 (declaration -> var_declaration .)
    CONST           reduce using rule 5 (declaration -> var_declaration .)
    TYPE            reduce using rule 5 (declaration -> var_declaration .)
    PROCEDURE       reduce using rule 5 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> var_declaration .)
    USES            reduce using rule 5 (declaration -> var_declaration .)


state 12

    (6) declaration -> const_declaration .

    BEGIN           reduce using rule 6 (declaration -> const_declaration .)
    VAR             reduce using rule 6 (declaration -> const_declaration .)
    CONST           reduce using rule 6 (declaration -> const_declaration .)
    TYPE            reduce using rule 6 (declaration -> const_declaration .)
    PROCEDURE       reduce using rule 6 (declaration -> const_declaration .)
    FUNCTION        reduce using rule 6 (declaration -> const_declaration .)
    USES            reduce using rule 6 (declaration -> const_declaration .)


state 13

    (7) declaration -> type_declaration .

    BEGIN           reduce using rule 7 (declaration -> type_declaration .)
    VAR             reduce using rule 7 (declaration -> type_declaration .)
    CONST           reduce using rule 7 (declaration -> type_declaration .)
    TYPE            reduce using rule 7 (declaration -> type_declaration .)
    PROCEDURE       reduce using rule 7 (declaration -> type_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> type_declaration .)
    USES            reduce using rule 7 (declaration -> type_declaration .)


state 14

    (8) declaration -> procedure_declaration .

    BEGIN           reduce using rule 8 (declaration -> procedure_declaration .)
    VAR             reduce using rule 8 (declaration -> procedure_declaration .)
    CONST           reduce using rule 8 (declaration -> procedure_declaration .)
    TYPE            reduce using rule 8 (declaration -> procedure_declaration .)
    PROCEDURE       reduce using rule 8 (declaration -> procedure_declaration .)
    FUNCTION        reduce using rule 8 (declaration -> procedure_declaration .)
    USES            reduce using rule 8 (declaration -> procedure_declaration .)


state 15

    (9) declaration -> function_declaration .

    BEGIN           reduce using rule 9 (declaration -> function_declaration .)
    VAR             reduce using rule 9 (declaration -> function_declaration .)
    CONST           reduce using rule 9 (declaration -> function_declaration .)
    TYPE            reduce using rule 9 (declaration -> function_declaration .)
    PROCEDURE       reduce using rule 9 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 9 (declaration -> function_declaration .)
    USES            reduce using rule 9 (declaration -> function_declaration .)


state 16

    (10) declaration -> uses_clause .

    BEGIN           reduce using rule 10 (declaration -> uses_clause .)
    VAR             reduce using rule 10 (declaration -> uses_clause .)
    CONST           reduce using rule 10 (declaration -> uses_clause .)
    TYPE            reduce using rule 10 (declaration -> uses_clause .)
    PROCEDURE       reduce using rule 10 (declaration -> uses_clause .)
    FUNCTION        reduce using rule 10 (declaration -> uses_clause .)
    USES            reduce using rule 10 (declaration -> uses_clause .)


state 17

    (14) var_declaration -> VAR . var_decl_list
    (15) var_decl_list -> . var_decl_list var_decl
    (16) var_decl_list -> . var_decl
    (17) var_decl -> . id_list COLON type SEMICOLON
    (18) id_list -> . id_list COMMA ID
    (19) id_list -> . ID

    ID              shift and go to state 43

    var_decl_list                  shift and go to state 40
    var_decl                       shift and go to state 41
    id_list                        shift and go to state 42

state 18

    (20) const_declaration -> CONST . const_list
    (21) const_list -> . const_list const_decl
    (22) const_list -> . const_decl
    (23) const_decl -> . ID EQUAL constant SEMICOLON

    ID              shift and go to state 46

    const_list                     shift and go to state 44
    const_decl                     shift and go to state 45

state 19

    (24) type_declaration -> TYPE . type_decl_list
    (25) type_decl_list -> . type_decl_list type_decl
    (26) type_decl_list -> . type_decl
    (27) type_decl -> . ID EQUAL type SEMICOLON

    ID              shift and go to state 49

    type_decl_list                 shift and go to state 47
    type_decl                      shift and go to state 48

state 20

    (28) procedure_declaration -> PROCEDURE . ID SEMICOLON block SEMICOLON
    (29) procedure_declaration -> PROCEDURE . ID LPAREN param_list RPAREN SEMICOLON block SEMICOLON

    ID              shift and go to state 50


state 21

    (30) function_declaration -> FUNCTION . ID COLON type SEMICOLON block SEMICOLON
    (31) function_declaration -> FUNCTION . ID LPAREN param_list RPAREN COLON type SEMICOLON block SEMICOLON

    ID              shift and go to state 51


state 22

    (11) uses_clause -> USES . identifier_list SEMICOLON
    (12) identifier_list -> . identifier_list COMMA ID
    (13) identifier_list -> . ID

    ID              shift and go to state 53

    identifier_list                shift and go to state 52

state 23

    (67) compound_statement -> BEGIN . statement_list END
    (46) statement_list -> . statement_list statement
    (47) statement_list -> . statement
    (48) statement -> . assignment_statement
    (49) statement -> . procedure_call
    (50) statement -> . compound_statement
    (51) statement -> . if_statement
    (52) statement -> . while_statement
    (53) statement -> . repeat_statement
    (54) statement -> . for_statement
    (55) statement -> . empty
    (56) assignment_statement -> . variable ASSIGN expression SEMICOLON
    (62) procedure_call -> . ID LPAREN args RPAREN SEMICOLON
    (63) procedure_call -> . ID SEMICOLON
    (67) compound_statement -> . BEGIN statement_list END
    (68) if_statement -> . IF expression THEN statement else_part
    (71) while_statement -> . WHILE expression DO statement
    (72) repeat_statement -> . REPEAT statement_list UNTIL expression SEMICOLON
    (73) for_statement -> . FOR ID ASSIGN expression direction expression DO statement
    (114) empty -> .
    (57) variable -> . ID
    (58) variable -> . ID LBRACKET expression_list RBRACKET
    (59) variable -> . ID DOT ID

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    ID              shift and go to state 35
    BEGIN           shift and go to state 23
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    REPEAT          shift and go to state 38
    FOR             shift and go to state 39
    END             reduce using rule 114 (empty -> .)

  ! ID              [ reduce using rule 114 (empty -> .) ]
  ! BEGIN           [ reduce using rule 114 (empty -> .) ]
  ! IF              [ reduce using rule 114 (empty -> .) ]
  ! WHILE           [ reduce using rule 114 (empty -> .) ]
  ! REPEAT          [ reduce using rule 114 (empty -> .) ]
  ! FOR             [ reduce using rule 114 (empty -> .) ]

    statement_list                 shift and go to state 54
    statement                      shift and go to state 25
    assignment_statement           shift and go to state 26
    procedure_call                 shift and go to state 27
    compound_statement             shift and go to state 28
    if_statement                   shift and go to state 29
    while_statement                shift and go to state 30
    repeat_statement               shift and go to state 31
    for_statement                  shift and go to state 32
    empty                          shift and go to state 33
    variable                       shift and go to state 34

state 24

    (2) block -> declarations BEGIN statement_list . END
    (46) statement_list -> statement_list . statement
    (48) statement -> . assignment_statement
    (49) statement -> . procedure_call
    (50) statement -> . compound_statement
    (51) statement -> . if_statement
    (52) statement -> . while_statement
    (53) statement -> . repeat_statement
    (54) statement -> . for_statement
    (55) statement -> . empty
    (56) assignment_statement -> . variable ASSIGN expression SEMICOLON
    (62) procedure_call -> . ID LPAREN args RPAREN SEMICOLON
    (63) procedure_call -> . ID SEMICOLON
    (67) compound_statement -> . BEGIN statement_list END
    (68) if_statement -> . IF expression THEN statement else_part
    (71) while_statement -> . WHILE expression DO statement
    (72) repeat_statement -> . REPEAT statement_list UNTIL expression SEMICOLON
    (73) for_statement -> . FOR ID ASSIGN expression direction expression DO statement
    (114) empty -> .
    (57) variable -> . ID
    (58) variable -> . ID LBRACKET expression_list RBRACKET
    (59) variable -> . ID DOT ID

  ! shift/reduce conflict for END resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    END             shift and go to state 55
    ID              shift and go to state 35
    BEGIN           shift and go to state 23
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    REPEAT          shift and go to state 38
    FOR             shift and go to state 39

  ! END             [ reduce using rule 114 (empty -> .) ]
  ! ID              [ reduce using rule 114 (empty -> .) ]
  ! BEGIN           [ reduce using rule 114 (empty -> .) ]
  ! IF              [ reduce using rule 114 (empty -> .) ]
  ! WHILE           [ reduce using rule 114 (empty -> .) ]
  ! REPEAT          [ reduce using rule 114 (empty -> .) ]
  ! FOR             [ reduce using rule 114 (empty -> .) ]

    statement                      shift and go to state 56
    assignment_statement           shift and go to state 26
    procedure_call                 shift and go to state 27
    compound_statement             shift and go to state 28
    if_statement                   shift and go to state 29
    while_statement                shift and go to state 30
    repeat_statement               shift and go to state 31
    for_statement                  shift and go to state 32
    empty                          shift and go to state 33
    variable                       shift and go to state 34

state 25

    (47) statement_list -> statement .

    END             reduce using rule 47 (statement_list -> statement .)
    ID              reduce using rule 47 (statement_list -> statement .)
    BEGIN           reduce using rule 47 (statement_list -> statement .)
    IF              reduce using rule 47 (statement_list -> statement .)
    WHILE           reduce using rule 47 (statement_list -> statement .)
    REPEAT          reduce using rule 47 (statement_list -> statement .)
    FOR             reduce using rule 47 (statement_list -> statement .)
    UNTIL           reduce using rule 47 (statement_list -> statement .)


state 26

    (48) statement -> assignment_statement .

    END             reduce using rule 48 (statement -> assignment_statement .)
    ID              reduce using rule 48 (statement -> assignment_statement .)
    BEGIN           reduce using rule 48 (statement -> assignment_statement .)
    IF              reduce using rule 48 (statement -> assignment_statement .)
    WHILE           reduce using rule 48 (statement -> assignment_statement .)
    REPEAT          reduce using rule 48 (statement -> assignment_statement .)
    FOR             reduce using rule 48 (statement -> assignment_statement .)
    UNTIL           reduce using rule 48 (statement -> assignment_statement .)
    ELSE            reduce using rule 48 (statement -> assignment_statement .)


state 27

    (49) statement -> procedure_call .

    END             reduce using rule 49 (statement -> procedure_call .)
    ID              reduce using rule 49 (statement -> procedure_call .)
    BEGIN           reduce using rule 49 (statement -> procedure_call .)
    IF              reduce using rule 49 (statement -> procedure_call .)
    WHILE           reduce using rule 49 (statement -> procedure_call .)
    REPEAT          reduce using rule 49 (statement -> procedure_call .)
    FOR             reduce using rule 49 (statement -> procedure_call .)
    UNTIL           reduce using rule 49 (statement -> procedure_call .)
    ELSE            reduce using rule 49 (statement -> procedure_call .)


state 28

    (50) statement -> compound_statement .

    END             reduce using rule 50 (statement -> compound_statement .)
    ID              reduce using rule 50 (statement -> compound_statement .)
    BEGIN           reduce using rule 50 (statement -> compound_statement .)
    IF              reduce using rule 50 (statement -> compound_statement .)
    WHILE           reduce using rule 50 (statement -> compound_statement .)
    REPEAT          reduce using rule 50 (statement -> compound_statement .)
    FOR             reduce using rule 50 (statement -> compound_statement .)
    UNTIL           reduce using rule 50 (statement -> compound_statement .)
    ELSE            reduce using rule 50 (statement -> compound_statement .)


state 29

    (51) statement -> if_statement .

    END             reduce using rule 51 (statement -> if_statement .)
    ID              reduce using rule 51 (statement -> if_statement .)
    BEGIN           reduce using rule 51 (statement -> if_statement .)
    IF              reduce using rule 51 (statement -> if_statement .)
    WHILE           reduce using rule 51 (statement -> if_statement .)
    REPEAT          reduce using rule 51 (statement -> if_statement .)
    FOR             reduce using rule 51 (statement -> if_statement .)
    UNTIL           reduce using rule 51 (statement -> if_statement .)
    ELSE            reduce using rule 51 (statement -> if_statement .)


state 30

    (52) statement -> while_statement .

    END             reduce using rule 52 (statement -> while_statement .)
    ID              reduce using rule 52 (statement -> while_statement .)
    BEGIN           reduce using rule 52 (statement -> while_statement .)
    IF              reduce using rule 52 (statement -> while_statement .)
    WHILE           reduce using rule 52 (statement -> while_statement .)
    REPEAT          reduce using rule 52 (statement -> while_statement .)
    FOR             reduce using rule 52 (statement -> while_statement .)
    UNTIL           reduce using rule 52 (statement -> while_statement .)
    ELSE            reduce using rule 52 (statement -> while_statement .)


state 31

    (53) statement -> repeat_statement .

    END             reduce using rule 53 (statement -> repeat_statement .)
    ID              reduce using rule 53 (statement -> repeat_statement .)
    BEGIN           reduce using rule 53 (statement -> repeat_statement .)
    IF              reduce using rule 53 (statement -> repeat_statement .)
    WHILE           reduce using rule 53 (statement -> repeat_statement .)
    REPEAT          reduce using rule 53 (statement -> repeat_statement .)
    FOR             reduce using rule 53 (statement -> repeat_statement .)
    UNTIL           reduce using rule 53 (statement -> repeat_statement .)
    ELSE            reduce using rule 53 (statement -> repeat_statement .)


state 32

    (54) statement -> for_statement .

    END             reduce using rule 54 (statement -> for_statement .)
    ID              reduce using rule 54 (statement -> for_statement .)
    BEGIN           reduce using rule 54 (statement -> for_statement .)
    IF              reduce using rule 54 (statement -> for_statement .)
    WHILE           reduce using rule 54 (statement -> for_statement .)
    REPEAT          reduce using rule 54 (statement -> for_statement .)
    FOR             reduce using rule 54 (statement -> for_statement .)
    UNTIL           reduce using rule 54 (statement -> for_statement .)
    ELSE            reduce using rule 54 (statement -> for_statement .)


state 33

    (55) statement -> empty .

    END             reduce using rule 55 (statement -> empty .)
    ID              reduce using rule 55 (statement -> empty .)
    BEGIN           reduce using rule 55 (statement -> empty .)
    IF              reduce using rule 55 (statement -> empty .)
    WHILE           reduce using rule 55 (statement -> empty .)
    REPEAT          reduce using rule 55 (statement -> empty .)
    FOR             reduce using rule 55 (statement -> empty .)
    UNTIL           reduce using rule 55 (statement -> empty .)
    ELSE            reduce using rule 55 (statement -> empty .)


state 34

    (56) assignment_statement -> variable . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 57


state 35

    (62) procedure_call -> ID . LPAREN args RPAREN SEMICOLON
    (63) procedure_call -> ID . SEMICOLON
    (57) variable -> ID .
    (58) variable -> ID . LBRACKET expression_list RBRACKET
    (59) variable -> ID . DOT ID

    LPAREN          shift and go to state 58
    SEMICOLON       shift and go to state 59
    ASSIGN          reduce using rule 57 (variable -> ID .)
    LBRACKET        shift and go to state 60
    DOT             shift and go to state 61


state 36

    (68) if_statement -> IF . expression THEN statement else_part
    (76) expression -> . simple_expression relop_opt
    (86) simple_expression -> . term
    (87) simple_expression -> . simple_expression addop term
    (92) term -> . factor
    (93) term -> . term mulop factor
    (103) factor -> . variable
    (104) factor -> . INTEGER_CONST
    (105) factor -> . REAL_CONST
    (106) factor -> . STRING_LITERAL
    (107) factor -> . LPAREN expression RPAREN
    (108) factor -> . NOT factor
    (109) factor -> . MINUS factor
    (57) variable -> . ID
    (58) variable -> . ID LBRACKET expression_list RBRACKET
    (59) variable -> . ID DOT ID

    INTEGER_CONST   shift and go to state 67
    REAL_CONST      shift and go to state 68
    STRING_LITERAL  shift and go to state 69
    LPAREN          shift and go to state 70
    NOT             shift and go to state 71
    MINUS           shift and go to state 72
    ID              shift and go to state 73

    expression                     shift and go to state 62
    simple_expression              shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 65
    variable                       shift and go to state 66

state 37

    (71) while_statement -> WHILE . expression DO statement
    (76) expression -> . simple_expression relop_opt
    (86) simple_expression -> . term
    (87) simple_expression -> . simple_expression addop term
    (92) term -> . factor
    (93) term -> . term mulop factor
    (103) factor -> . variable
    (104) factor -> . INTEGER_CONST
    (105) factor -> . REAL_CONST
    (106) factor -> . STRING_LITERAL
    (107) factor -> . LPAREN expression RPAREN
    (108) factor -> . NOT factor
    (109) factor -> . MINUS factor
    (57) variable -> . ID
    (58) variable -> . ID LBRACKET expression_list RBRACKET
    (59) variable -> . ID DOT ID

    INTEGER_CONST   shift and go to state 67
    REAL_CONST      shift and go to state 68
    STRING_LITERAL  shift and go to state 69
    LPAREN          shift and go to state 70
    NOT             shift and go to state 71
    MINUS           shift and go to state 72
    ID              shift and go to state 73

    expression                     shift and go to state 74
    simple_expression              shift and go to state 63
    term                           shift and go to state 64
    factor                         shift and go to state 65
    variable                       shift and go to state 66

state 38
